# Irreverence

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
game/: convars.ir
game/assets/maps/: bugtest.irbm  concept.irbm  dev_generic.irbm  goodtest.irbm  simple.irbm
game/assets/materials/: AREA.shader  CLIP.shader  DEVGRID_BLACK0.shader  GRID_BLACK0.shader  GRID_BLACK0_ent.shader  INVISIBLE.shader  NODRAW.shader  ORIGIN.shader  SKIP.shader  SKY.shader  TRIGGER.shader  button_off.shader  ceil1.shader  ceillamp.shader  crate1.shader  crate1_ent.shader  door1.shader  doorframe1.shader  floor1.shader  floor2.shader  gem.shader  gem_orange.shader  gem_purple.shader  glass.shader  mtlbarrel1.shader  mtlbarrel2.shader  stairs1.shader  stairs2.shader  testsky.shader  tile0.shader  vent1.shader  wall1.shader  wall2.shader  wall3.shader  wall4.shader  wall5.shader
game/assets/shaders/: CompositeFinal.irs  CompositePBR.irs  CompositeSSAO.irs  CompositeTrans.irs  EntityLit.irs  EntityOpaque.irs  EntityTrans.irs  MapFaceLit.irs  MapOpaque.irs  MapTrans.irs  OpaqueMap.irs  Screen.irs  ScreenFinal.irs  ScreenTrans.irs  Sky.irs  Test.irs  TransMap.irs  vs_cubes.sc
game/assets/shaders/cube/: frag.sc
game/assets/shaders/gl/: Composite.vert  CompositeFinal.frag  CompositePBR.frag  CompositeSSAO.frag  CompositeTrans.frag  Map.vert  MapMesh.frag  MapMesh.vert  MapOpaque.frag  MapTrans.frag  OpaqueMap.frag  OpaqueMap.vert  Screen.frag  Screen.vert  ScreenFinal.frag  ScreenTrans.frag  Sky.frag  Sky.vert  Standard.vert  StandardOpaque.frag  StandardTrans.frag  TransMap.frag  VStandIStand.frag  VStandIStand.vert  test.frag  test.fs  test.vert  test.vs
game/assets/shaders/gl/include/: common.glsl  lighting.glsl
scripts/: build.sh  clear_shaders.sh  run.sh  setup-profile.sh  setup-windows.sh  setup.sh  windows_run.sh
src/: IR_AABB.hpp  IR_AssetBMap.cpp  IR_AssetBMap.hpp  IR_AssetMaterial.hpp  IR_AssetShader.cpp  IR_AssetShader.hpp  IR_AssetTexture.cpp  IR_AssetTexture.hpp  IR_Assets.cpp  IR_Assets.hpp  IR_Audio.cpp  IR_Audio.hpp  IR_BinaryMap.cpp  IR_BinaryMap.hpp  IR_CTypes.hpp  IR_CVar.cpp  IR_CVar.hpp  IR_Common.hpp  IR_Debug.cpp  IR_Debug.hpp  IR_Defer.hpp  IR_Entity.cpp  IR_Entity.hpp  IR_EntityMan.cpp  IR_EntityMan.hpp  IR_EntitySys.cpp  IR_EntitySys.hpp  IR_File.cpp  IR_File.hpp  IR_Globals.cpp  IR_Globals.hpp  IR_Gradient.hpp  IR_Input.cpp  IR_Input.hpp  IR_KeyValue.cpp  IR_KeyValue.hpp  IR_KeyValue_Load.cpp  IR_LayoutType.hpp  IR_Log.cpp  IR_Log.hpp  (+32 more)
src/Audio/: IR_WAV.cpp
src/Renderer/: IR_DXRenderer.cpp  IR_DXRenderer.hpp  IR_GLBuffer.cpp  IR_GLBuffer.hpp  IR_GLCmdList.cpp  IR_GLCmdList.hpp  IR_GLInstance.cpp  IR_GLInstance.hpp  IR_GLLayout.cpp  IR_GLLayout.hpp  IR_GLMaterial.cpp  IR_GLMaterial.hpp  IR_GLMesh.cpp  IR_GLMesh.hpp  IR_GLMeshPool.cpp  IR_GLMeshPool.hpp  IR_GLModel.cpp  IR_GLModel.hpp  IR_GLRenderer.cpp  IR_GLRenderer.hpp  IR_GLShader.cpp  IR_GLShader.hpp  IR_GLTexture.cpp  IR_GLTexture.hpp  IR_GLUniform.cpp  IR_GLUniform.hpp
src/Renderer/DX/: IR_DXRenderer.cpp  IR_DXRenderer.hpp
src/Renderer/GL/: IR_GLBuffer.cpp  IR_GLBuffer.hpp  IR_GLCmdList.cpp  IR_GLCmdList.hpp  IR_GLDefaultMesh.hpp  IR_GLFrame.cpp  IR_GLFrame.hpp  IR_GLInstance.cpp  IR_GLInstance.hpp  IR_GLLayout.cpp  IR_GLLayout.hpp  IR_GLLighting.cpp  IR_GLLighting.hpp  IR_GLMaterial.cpp  IR_GLMaterial.hpp  IR_GLMesh.cpp  IR_GLMesh.hpp  IR_GLMeshPool.cpp  IR_GLMeshPool.hpp  IR_GLModel.cpp  IR_GLModel.hpp  IR_GLRenderer.cpp  IR_GLRenderer.hpp  IR_GLShader.cpp  IR_GLShader.hpp  IR_GLTexture.cpp  IR_GLTexture.hpp  IR_GLUniform.cpp  IR_GLUniform.hpp
src/renderer/: IR_DXRenderer.cpp  IR_GLLayout.cpp  IR_GLLayout.hpp  IR_GLMaterial.cpp  IR_GLMaterial.hpp  IR_GLMesh.cpp  IR_GLMesh.hpp  IR_GLModel.cpp  IR_GLModel.hpp  IR_GLRenderer.cpp  IR_GLRenderer.hpp  IR_GLShader.cpp  IR_GLShader.hpp  IR_GLShaderStorage.cpp  IR_GLShaderStorage.hpp  IR_GLTexture.cpp  IR_GLTexture.hpp  IR_GLUniform.cpp
toolchains/: toolchain-windows.cmake
